styles/styles.scss
/* ... */
@function lighten($color) {
  @return color.scale($color, $lightness: 93%);
}

a,
a:hover,
a:focus,
a:active {
  outline: none;
}

:root {
  overflow-y: scroll;
  overscroll-behavior-y: none;
}

.tk-announcement {
  width: 100%;
  background-color: $magenta;
  padding: 0.75rem 1rem;
  text-align: center;

  .tk-announcement-content {
    a {
      color: white;
      font-weight: 500;
      text-decoration: none;
      display: block;

      &:hover {
        color: white;
        text-decoration: underline;
      }
    }
  }
}

.content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    code {
      // use the same `font-weight` as the parent element
      font-weight: unset;
    }
  }
}

.navbar {
  .navbar-brand {
    background-color: black;
  }
  .container {
    max-width: 1150px;
  }
  hr {
    background-color: $gray;
    height: 2rem;
    width: 1px;
    margin: 1rem 1.5rem;
    margin-top: auto;
    margin-bottom: auto;
  }
  .navbar-item {
    &.navbar-text {
      font-size: $body-font-size;
      padding: 0 1.5rem;
    }
    &.navbar-icon {
      padding: 0 1rem;
    }
    .icon {
      height: 1.8rem;
      width: 1.8rem;
    }
  }

  @include mobile {
    .navbar-menu {
      display: block;
      z-index: -1;

      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;

      transition: transform 0.2s ease-in-out;
    }
    .navbar-menu.is-active {
      opacity: 1;
      transform: translateY(100%);
      transition: transform 0.2s ease-in-out;
      pointer-events: auto;
    }
    .navbar-end {
      .navbar-item {
        margin-bottom: 1.7rem;

        &:first-child {
          margin-top: 0.5rem;
        }
      }

      .tk-social,
      .tk-social.navbar-icon {
        align-items: center;
        display: inline-block;
        padding-left: 1.7rem;
        margin-bottom: 0;
      }
    }
  }
}

.tk-landing {
  .container {
    max-width: 1150px;
  }
}

.hero {
  @include mobile {
    .hero-body {
      padding: 1.5rem;
    }

    .button {
      font-size: 1.1rem;
    }
  }

  .title {
    font-size: 1.7em;
  }

  &.tk-intro {
    .title {
      padding-bottom: 0.25em;

      @include tablet {
        font-size: 2.4em;
        line-height: 1.2em;
      }
    }

    .container {
      max-width: 650px;
    }
    .subtitle {
      font-weight: 300;
      line-height: 1.5rem;
      font-size: $body-font-size;
    }
    .button {
      background-color: $tk-lib-runtime;
      font-weight: 500;
      padding-left: 2rem;
      padding-right: 2rem;
    }
    .button:hover {
      background-color: darken($magenta);
    }
  }

  .tk-hero-bg {
    position: relative;
    min-width: 50%;

    .tk-float {
      user-select: none;
      position: absolute;
      will-change: transform;
      z-index: 0;

      img {
        will-change: transform;
      }
    }

    @media (min-width: $tablet) {
      @mixin spin-right($radius, $dur) {
        width: $radius;
        height: $radius;
        animation: spin-right $dur linear infinite;

        img {
          animation: spin-left $dur linear infinite;
        }
      }

      @mixin spin-left($radius, $dur, $dur2: $dur) {
        width: $radius;
        height: $radius;
        animation: spin-left $dur linear infinite;

        img {
          animation: spin-right $dur2 linear infinite;
        }
      }

      @keyframes spin-right {
        0% {
          transform: rotate(0deg);
        }
        100% {
          transform: rotate(-360deg);
        }
      }
      @keyframes spin-left {
        0% {
          transform: rotate(0deg);
        }
        100% {
          transform: rotate(360deg);
        }
      }

      #tk-float-hyper {
        top: -30px;
        left: calc(-20%);
        @include spin-right(60px, 6s);
      }
      #tk-float-tonic {
        top: 60px;
        left: -200px;
        @include spin-left(80px, 30s);
      }
      #tk-float-tower {
        bottom: -10px;
        @include spin-left(50px, 4s, 4.1s);
      }
      #tk-float-bytes {
        top: 110px;
        right: -120px;
        @include spin-right(50px, 8s);
      }
      #tk-float-mio {
        bottom: 0px;
        right: 15px;
        @include spin-right(60px, 10s);
      }
      #tk-float-runtime {
        bottom: 35px;
        right: -210px;
        @include spin-left(50px, 9s);
      }
      #tk-float-runtime2 {
        bottom: 10px;
        left: -210px;
        @include spin-left(50px, 9s);
      }
      #tk-float-tracing {
        top: 0;
        right: -190px;
        @include spin-left(75px, 18s, 15s);
      }
    }
  }

  &.tk-users {
    .title {
      font-size: 1.8em;
      margin-bottom: 1em;
    }
    .column {
      padding: 20px 00px;
    }
    .image img {
      width: 70%;
      max-width: 8rem;
      margin: 0 auto;
    }
    .aws img {
      transform: scale(0.5);
    }
  }
}

.tk-features,
.tk-stack {
  > .container {
    padding: 2em 1em;
    max-width: 1050;
  }

  code {
    color: $dark-gray;
  }

  .title {
    font-size: 1.8rem;

    @include mobile {
      font-size: 1.6rem;
    }
  }

  .subtitle {
    font-weight: 300;
    font-size: $body-font-size;
    line-height: 1.4;
  }
}

.tk-features {
  background-color: $cream;

  .hero {
    margin: 2em;

    .title {
      padding-bottom: 0.55em;
    }
  }

  .card {
    margin: 0.75em;
    border: 2px solid black;
    border-radius: 4px;
  }

  .tk-lib {
    .title {
      img {
        margin-right: 0.4rem;
      }
    }
    .subtitle {
      line-height: 1.5rem;
    }
    .learn-more {
      font-weight: 600;
    }
  }

  @each $name, $color, $size, $adjust in $libs {
    .tk-lib-#{$name} {
      .title,
      .learn-more a {
        color: $color;
      }
      .learn-more a:hover {
        color: darken($color);
      }
      .card {
        border-color: $color;
      }
    }
  }
}
/* ... */

